--- a/po/stellarium/sk.po
+++ b/po/stellarium/sk.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-02 20:19+0700\n"
-"PO-Revision-Date: 2012-05-09 08:43+0000\n"
-"Last-Translator: Juraj Kubica <Juraj.Kubica@seznam.cz>\n"
+"PO-Revision-Date: 2012-06-05 22:01+0000\n"
+"Last-Translator: Miroslav Remák <Unknown>\n"
 "Language-Team: Slovak <sk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-03 04:42+0000\n"
-"X-Generator: Launchpad (build 15342)\n"
+"X-Launchpad-Export-Date: 2012-06-06 04:35+0000\n"
+"X-Generator: Launchpad (build 15353)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -560,7 +560,7 @@ msgstr "Textové rozhranie"
 
 #: src/gui/HelpDialog.cpp:171
 msgid "Stellarium Help"
-msgstr "Nápoveda pre Stellarium"
+msgstr "Pomocník pre Stellarium"
 
 #: src/gui/HelpDialog.cpp:172
 msgid "Keys"
@@ -815,7 +815,7 @@ msgstr "Okná"
 
 #: src/gui/StelGui.cpp:137
 msgid "Help window"
-msgstr "Nápoveda"
+msgstr "Pomocník"
 
 #: src/gui/StelGui.cpp:138
 msgid "Configuration window"
