Launchpad automatic translations update.

--- a/po/stellarium/it.po
+++ b/po/stellarium/it.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-02 20:19+0700\n"
-"PO-Revision-Date: 2012-05-16 15:27+0000\n"
+"PO-Revision-Date: 2012-06-08 09:46+0000\n"
 "Last-Translator: Guybrush88 <Unknown>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-03 04:39+0000\n"
-"X-Generator: Launchpad (build 15342)\n"
+"X-Launchpad-Export-Date: 2012-06-09 05:15+0000\n"
+"X-Generator: Launchpad (build 15376)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -920,19 +920,19 @@ msgstr "Sottrai 1 settimana siderale"
 
 #: src/gui/StelGui.cpp:171
 msgid "Add 1 sidereal month"
-msgstr ""
+msgstr "Aggiungi 1 mese siderale"
 
 #: src/gui/StelGui.cpp:172
 msgid "Subtract 1 sidereal month"
-msgstr ""
+msgstr "Sottrai 1 mese siderale"
 
 #: src/gui/StelGui.cpp:173
 msgid "Add 1 sidereal year"
-msgstr ""
+msgstr "Aggiungi 1 anno siderale"
 
 #: src/gui/StelGui.cpp:174
 msgid "Subtract 1 sidereal year"
-msgstr ""
+msgstr "Sottrai 1 anno siderale"
 
 #: src/gui/StelGui.cpp:177
 msgid "Center on selected object"
@@ -3006,15 +3006,15 @@ msgstr "Sfera Celeste"
 
 #: src/ui_viewDialog.h:1162
 msgid "Show equator line"
-msgstr ""
+msgstr "Mostra la linea dell'equatore"
 
 #: src/ui_viewDialog.h:1166
 msgid "Show meridian line"
-msgstr ""
+msgstr "Mostra la linea del meridiano"
 
 #: src/ui_viewDialog.h:1170
 msgid "Show horizon line"
-msgstr ""
+msgstr "Mostra la linea dell'orizzonte"
 
 #: src/ui_viewDialog.h:1174
 msgid "Show ecliptic line"
