--- a/po/stellarium/sk.po
+++ b/po/stellarium/sk.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-02 20:19+0700\n"
-"PO-Revision-Date: 2012-06-07 18:09+0000\n"
+"PO-Revision-Date: 2012-06-08 19:53+0000\n"
 "Last-Translator: Miroslav Remák <Unknown>\n"
 "Language-Team: Slovak <sk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-08 04:36+0000\n"
+"X-Launchpad-Export-Date: 2012-06-09 05:15+0000\n"
 "X-Generator: Launchpad (build 15376)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -1125,7 +1125,7 @@ msgstr ""
 
 #: src/gui/SearchDialog.cpp:508
 msgid "Harvard University (USA)"
-msgstr ""
+msgstr "Harvardova univerzita (USA)"
 
 #: src/main.cpp:337
 msgid "This system does not support OpenGL."
@@ -1330,12 +1330,12 @@ msgstr "Cháron"
 #. TRANSLATORS: Moon of Pluto (II)
 #: src/translations.h:82
 msgid "Nix"
-msgstr ""
+msgstr "Nix"
 
 #. TRANSLATORS: Moon of Pluto (III)
 #: src/translations.h:84
 msgid "Hydra (moon)"
-msgstr ""
+msgstr "Hydra (mesiac)"
 
 #: src/translations.h:85
 msgid "Eris"
@@ -1400,22 +1400,22 @@ msgstr "Pozorovateľ Slnečnej sústavy"
 #. TRANSLATORS: TNO/Asteroid (90377) Sedna
 #: src/translations.h:102
 msgid "Sedna"
-msgstr ""
+msgstr "Sedna"
 
 #. TRANSLATORS: TNO/Asteroid (50000) Quaoar
 #: src/translations.h:104
 msgid "Quaoar"
-msgstr ""
+msgstr "Quaoar"
 
 #. TRANSLATORS: TNO/Asteroid (90482) Orcus
 #: src/translations.h:106
 msgid "Orcus"
-msgstr ""
+msgstr "Orcus"
 
 #. TRANSLATORS: TNO/Asteroid (136108) Haumea
 #: src/translations.h:108
 msgid "Haumea"
-msgstr ""
+msgstr "Haumea"
 
 #. TRANSLATORS: Asteroid (5) Astraea
 #: src/translations.h:111
@@ -1495,7 +1495,7 @@ msgstr "Západ"
 
 #: src/translations.h:145
 msgid "Arabic"
-msgstr ""
+msgstr "Arabská"
 
 #: src/translations.h:146
 msgid "Aztec"
@@ -1552,12 +1552,12 @@ msgstr "Západná"
 #. TRANSLATORS: Name of landscape
 #: src/translations.h:162
 msgid "Guereins"
-msgstr ""
+msgstr "Guereins"
 
 #. TRANSLATORS: Name of landscape
 #: src/translations.h:164
 msgid "Trees"
-msgstr ""
+msgstr "Stromy"
 
 #. TRANSLATORS: Landscape name: Hurricane Ridge
 #: src/translations.h:168
@@ -1567,12 +1567,12 @@ msgstr ""
 #. TRANSLATORS: Name of landscape
 #: src/translations.h:170
 msgid "Ocean"
-msgstr ""
+msgstr "Oceán"
 
 #. TRANSLATORS: Landscape name: Garching bei Munchen
 #: src/translations.h:172
 msgid "Garching"
-msgstr ""
+msgstr "Garching"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:180
@@ -1582,22 +1582,22 @@ msgstr ""
 #. TRANSLATORS: Name of script
 #: src/translations.h:182
 msgid "Partial Lunar Eclipse"
-msgstr ""
+msgstr "Čiastočné zatmenie Mesiaca"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:184
 msgid "Total Lunar Eclipse"
-msgstr ""
+msgstr "Úplné zatmenie Mesiaca"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:186
 msgid "Screensaver"
-msgstr ""
+msgstr "Šetrič obrazovky"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:188
 msgid "Solar Eclipse 2009"
-msgstr ""
+msgstr "Zatmenie Slnka 2009"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:190
@@ -1611,15 +1611,15 @@ msgstr ""
 
 #: src/translations.h:195
 msgid "Look around each installed landscape."
-msgstr ""
+msgstr "Rozhliadnutie okolo každého nainštalovaného terénu."
 
 #: src/translations.h:196
 msgid "Script to demonstrate a partial lunar eclipse."
-msgstr ""
+msgstr "Skript na demonštrovanie čiastočného zatmenia Mesiaca."
 
 #: src/translations.h:197
 msgid "Script to demonstrate a total lunar eclipse."
-msgstr ""
+msgstr "Skript na demonštrovanie úplného zatmenia Mesiaca."
 
 #: src/translations.h:198
 msgid "A slow, infinite tour of the sky, looking at random objects."
@@ -1630,6 +1630,8 @@ msgid ""
 "Script to demonstrate a total solar eclipse which has happened in 2009 "
 "(location=Rangpur, Bangladesh)."
 msgstr ""
+"Skript na demonštrovanie úplného zatmenia Slnka, ktoré nastalo v roku 2009 "
+"(poloha=Rangpur, Bangladéš)."
 
 #: src/translations.h:200
 msgid "Script which runs automatically at startup"
@@ -1644,55 +1646,55 @@ msgstr ""
 
 #: src/translations.h:204
 msgid "Andorra"
-msgstr ""
+msgstr "Andorra"
 
 #: src/translations.h:205
 msgid "United Arab Emirates"
-msgstr ""
+msgstr "Spojené arabské emiráty"
 
 #: src/translations.h:206
 msgid "Afghanistan"
-msgstr ""
+msgstr "Afganistan"
 
 #: src/translations.h:207
 msgid "Antigua and Barbuda"
-msgstr ""
+msgstr "Antigua a Barbuda"
 
 #: src/translations.h:208
 msgid "Anguilla"
-msgstr ""
+msgstr "Anguilla"
 
 #: src/translations.h:209
 msgid "Albania"
-msgstr ""
+msgstr "Albánsko"
 
 #: src/translations.h:210
 msgid "Armenia"
-msgstr ""
+msgstr "Arménsko"
 
 #: src/translations.h:211
 msgid "Netherlands Antilles"
-msgstr ""
+msgstr "Holandské Antily"
 
 #: src/translations.h:212
 msgid "Angola"
-msgstr ""
+msgstr "Angola"
 
 #: src/translations.h:213
 msgid "Antarctica"
-msgstr ""
+msgstr "Antarktída"
 
 #: src/translations.h:214
 msgid "Argentina"
-msgstr ""
+msgstr "Argentína"
 
 #: src/translations.h:215
 msgid "American Samoa"
-msgstr ""
+msgstr "Americká Samoa"
 
 #: src/translations.h:216
 msgid "Austria"
-msgstr ""
+msgstr "Rakúsko"
 
 #: src/translations.h:217
 msgid "Australia"
