--- a/po/stellarium/mr.po
+++ b/po/stellarium/mr.po
@@ -8,22 +8,22 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-06-02 20:19+0700\n"
-"PO-Revision-Date: 2011-11-14 06:31+0000\n"
-"Last-Translator: Harshal Raje <Unknown>\n"
+"PO-Revision-Date: 2012-06-08 15:36+0000\n"
+"Last-Translator: nyogi <nyogi2004@gmail.com>\n"
 "Language-Team: Marathi <mr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-03 04:40+0000\n"
-"X-Generator: Launchpad (build 15342)\n"
+"X-Launchpad-Export-Date: 2012-06-09 05:15+0000\n"
+"X-Generator: Launchpad (build 15376)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
-msgstr ""
+msgstr "मध्यान्हवृत्त"
 
 #: src/core/modules/GridLinesMgr.cpp:546 src/ui_viewDialog.h:1176
 msgid "Ecliptic"
-msgstr ""
+msgstr "क्रांतीवृत्त"
 
 #: src/core/modules/GridLinesMgr.cpp:550 src/ui_viewDialog.h:1164
 msgid "Equator"
@@ -35,7 +35,7 @@ msgstr "Kshitij"
 
 #: src/core/modules/GridLinesMgr.cpp:558
 msgid "Galactic Plane"
-msgstr ""
+msgstr "दिर्घिका प्रतल"
 
 #: src/core/modules/LandscapeMgr.cpp:495
 msgid "Author: "
@@ -64,7 +64,7 @@ msgstr "प्रकार: <b>%1</b>"
 #: plugins/Supernovae/src/Supernova.cpp:104 plugins/Quasars/src/Quasar.cpp:106
 #, qt-format
 msgid "Magnitude: <b>%1</b> (extincted to: <b>%2</b>)"
-msgstr ""
+msgstr "प्रत: <b>%1</b> (पर्यंत: <b>%2</b>)"
 
 #: src/core/modules/Nebula.cpp:104 src/core/modules/Planet.cpp:124
 #: plugins/Supernovae/src/Supernova.cpp:107 plugins/Quasars/src/Quasar.cpp:118
@@ -123,12 +123,12 @@ msgstr ""
 #: src/core/modules/Planet.cpp:141
 #, qt-format
 msgid "Obliquity (of date): %1"
-msgstr ""
+msgstr "तिर्यकता(of date): %1"
 
 #: src/core/modules/Planet.cpp:151
 #, no-c-format, qt-format
 msgid "Distance: %1AU (%2 km)"
-msgstr ""
+msgstr "अंतर: %1AU (%2 km)"
 
 #: src/core/modules/Planet.cpp:158
 #, no-c-format, qt-format
@@ -138,7 +138,7 @@ msgstr "अंतर: %1AU"
 #: src/core/modules/Planet.cpp:169
 #, qt-format
 msgid "Apparent diameter: %1, with rings: %2"
-msgstr ""
+msgstr "भासमान व्यास r: %1, वर्तूळाचा: %2"
 
 #: src/core/modules/Planet.cpp:175
 #, qt-format
@@ -148,22 +148,22 @@ msgstr "भासमान व्यास: %1"
 #: src/core/modules/Planet.cpp:189
 #, qt-format
 msgid "Phase Angle: %1"
-msgstr ""
+msgstr "कला कोन: %1"
 
 #: src/core/modules/Planet.cpp:190
 #, qt-format
 msgid "Elongation: %1"
-msgstr ""
+msgstr "दिर्घिकरण: %1"
 
 #: src/core/modules/Planet.cpp:191
 #, qt-format
 msgid "Phase: %1"
-msgstr ""
+msgstr "प्रावस्था : %1"
 
 #: src/core/modules/Planet.cpp:192
 #, qt-format
 msgid "Illuminated: %1%"
-msgstr ""
+msgstr "प्रकाशित: %1%"
 
 #: src/core/modules/StarWrapper.cpp:52
 #, qt-format
@@ -173,17 +173,17 @@ msgstr "प्रत: <b>%1</b> (B-V: %2)"
 #: src/core/modules/StarWrapper.cpp:55
 #, qt-format
 msgid "Apparent Magnitude: <b>%1</b> (by extinction)"
-msgstr ""
+msgstr "भासमान प्रत: <b>%1</b> (by extinction)"
 
 #: src/core/modules/StarWrapper.cpp:115 plugins/Quasars/src/Quasar.cpp:100
 #, qt-format
 msgid "Magnitude: <b>%1</b> (extincted to: <b>%2</b>. B-V: <b>%3</b>)"
-msgstr ""
+msgstr "प्रत : <b>%1</b> (पर्यंत: <b>%2</b>. B-V: <b>%3</b>)"
 
 #: src/core/modules/StarWrapper.cpp:119 plugins/Quasars/src/Quasar.cpp:114
 #, qt-format
 msgid "Magnitude: <b>%1</b> (B-V: <b>%2</b>)"
-msgstr ""
+msgstr "प्रत : <b>%1</b> (B-V: <b>%2</b>)"
 
 #: src/core/modules/StarWrapper.cpp:130
 #, qt-format
@@ -331,7 +331,7 @@ msgstr "तास कोन/डेक : %1/%2"
 
 #: src/core/StelObject.cpp:103 src/core/StelObject.cpp:122
 msgid "(geometric)"
-msgstr ""
+msgstr "(भौ मितिक)"
 
 #: src/core/StelObject.cpp:106 src/core/StelObject.cpp:128
 msgid "(apparent)"
@@ -345,27 +345,27 @@ msgstr "दिगंश/उन्न्तांश: %1/%2"
 
 #: src/core/SimbadSearcher.cpp:55
 msgid "Network error"
-msgstr ""
+msgstr "नेटवर्क त्रुटी"
 
 #: src/core/SimbadSearcher.cpp:92 src/core/SimbadSearcher.cpp:104
 msgid "Error parsing position"
-msgstr ""
+msgstr "त्रुटी पदनिरुपण स्थिती"
 
 #: src/core/SimbadSearcher.cpp:130
 msgid "Querying"
-msgstr ""
+msgstr "विचाराधीन"
 
 #: src/core/SimbadSearcher.cpp:132
 msgid "Error"
-msgstr ""
+msgstr "त्रुटी"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Not found"
-msgstr ""
+msgstr "आढळले नाही"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Found"
-msgstr ""
+msgstr "सापडले"
 
 #: src/gui/ConfigurationDialog.cpp:346
 msgid "Select screenshot directory"
@@ -417,7 +417,7 @@ msgstr ""
 
 #: src/gui/ConfigurationDialog.cpp:769
 msgid "All available star catalogs have been installed."
-msgstr ""
+msgstr "उपलब्द्ध सर्व तारकासंच प्रस्थापित केले आहेत"
 
 #: src/gui/ConfigurationDialog.cpp:774
 #, qt-format
@@ -521,15 +521,15 @@ msgstr "जेव्हा आज्ञावली कार्यरत अस
 
 #: src/gui/HelpDialog.cpp:73
 msgid "Stop currently running script"
-msgstr ""
+msgstr "सद्य् स्थितीतील आज्ञावली थांबवा"
 
 #: src/gui/HelpDialog.cpp:74 src/gui/StelGui.cpp:151 src/gui/StelGui.cpp:152
 msgid "Pause script execution"
-msgstr ""
+msgstr "आज्ञावलींचे अंमलबजावणी थोपवा"
 
 #: src/gui/HelpDialog.cpp:75 src/gui/StelGui.cpp:153
 msgid "Resume script execution"
-msgstr ""
+msgstr "आज्ञावलींचे अंमलबजावणी सुरु करा"
 
 #: src/gui/HelpDialog.cpp:76 src/gui/StelGui.cpp:148
 msgid "Slow down the script execution rate"
@@ -550,12 +550,12 @@ msgstr "आज्ञावली प्रक्रिया वेग साम
 #: plugins/Satellites/src/Satellites.cpp:128
 #: plugins/Pulsars/src/Pulsars.cpp:146
 msgid "Plugin Key Bindings"
-msgstr ""
+msgstr "जोडसाधनांची बधंने"
 
 #: src/gui/HelpDialog.cpp:82
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:82
 msgid "Text User Interface"
-msgstr ""
+msgstr "शब्द वा्परकर्ता फलक"
 
 #: src/gui/HelpDialog.cpp:171
 msgid "Stellarium Help"
@@ -651,17 +651,19 @@ msgstr "विकासक: %1"
 #: src/gui/HelpDialog.cpp:310 src/gui/HelpDialog.cpp:311
 #, qt-format
 msgid "Tester: %1"
-msgstr ""
+msgstr "टेस्टर: %1"
 
 #: src/gui/HelpDialog.cpp:312
 msgid "Past Developers"
-msgstr ""
+msgstr "मागिल विकसक"
 
 #: src/gui/HelpDialog.cpp:313
 msgid ""
 "Several people have made significant contributions, but are no longer "
 "active. Their work has made a big difference to the project:"
 msgstr ""
+"खुप व्यक्तींचे यात महत्वपुर्ण योगदान आहे, परंतू त्या सध्या सक्रिय नाहित. "
+"त्यांच्या कामामुळे या प्रकल्पात महत्वाचा फरक पडला आहे"
 
 #: src/gui/HelpDialog.cpp:314
 #, qt-format
@@ -714,7 +716,7 @@ msgstr "विषुवांश J2000 जाळी"
 
 #: src/gui/StelGui.cpp:111 src/ui_viewDialog.h:1158
 msgid "Ecliptic J2000 grid"
-msgstr ""
+msgstr "क्रांतीवृत्त J2000 जालीका"
 
 #: src/gui/StelGui.cpp:112 src/ui_viewDialog.h:1160
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:354
@@ -723,7 +725,7 @@ msgstr "दिर्घीका जाल"
 
 #: src/gui/StelGui.cpp:113 src/ui_viewDialog.h:1180
 msgid "Galactic plane"
-msgstr ""
+msgstr "दिर्घिका प्रतल"
 
 #: src/gui/StelGui.cpp:114
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:335
@@ -778,7 +780,7 @@ msgstr "तारे"
 #: src/gui/StelGui.cpp:127
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:297
 msgid "Planet labels"
-msgstr ""
+msgstr "ग्रहांची नावे"
 
 #: src/gui/StelGui.cpp:128
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:301
@@ -913,19 +915,19 @@ msgstr "१ नक्षत्र आठवडा कमी करा"
 
 #: src/gui/StelGui.cpp:171
 msgid "Add 1 sidereal month"
-msgstr ""
+msgstr "१ नाक्षत्र महिना वाढवा"
 
 #: src/gui/StelGui.cpp:172
 msgid "Subtract 1 sidereal month"
-msgstr ""
+msgstr "१ नाक्षत्र महिना कमी करा"
 
 #: src/gui/StelGui.cpp:173
 msgid "Add 1 sidereal year"
-msgstr ""
+msgstr "१ नाक्षत्र वर्ष वाढवा"
 
 #: src/gui/StelGui.cpp:174
 msgid "Subtract 1 sidereal year"
-msgstr ""
+msgstr "१ नाक्षत्र वर्ष कमी करा"
 
 #: src/gui/StelGui.cpp:177
 msgid "Center on selected object"
@@ -961,7 +963,7 @@ msgstr "पटलचित्र साठवून ठेवा"
 
 #: src/gui/StelGui.cpp:187
 msgid "Copy selected object information to clipboard"
-msgstr ""
+msgstr "निवडलेला मजकूर क्लिपबोर्डवर घ्या"
 
 #: src/gui/StelGui.cpp:189
 msgid "Auto hide horizontal button bar"
@@ -1020,7 +1022,7 @@ msgstr "ZIP गाठोडी"
 #: src/gui/AddRemoveLandscapesDialog.cpp:127
 #, qt-format
 msgid "Landscape \"%1\" has been installed successfully."
-msgstr ""
+msgstr "देखावा  \"%1\"योग्य रित्या स्थापित झाला आहे."
 
 #: src/gui/AddRemoveLandscapesDialog.cpp:128
 #: src/gui/AddRemoveLandscapesDialog.cpp:155
@@ -1089,7 +1091,7 @@ msgstr ""
 
 #: src/gui/ScriptConsole.cpp:74
 msgid "selected text"
-msgstr ""
+msgstr "निवडलेला मजकूर"
 
 #: src/gui/ScriptConsole.cpp:75
 msgid "clear text"
