--- a/po/stellarium/ms.po
+++ b/po/stellarium/ms.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-02 20:19+0700\n"
-"PO-Revision-Date: 2012-06-05 02:42+0000\n"
+"PO-Revision-Date: 2012-06-09 15:32+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-06 04:35+0000\n"
-"X-Generator: Launchpad (build 15353)\n"
+"X-Launchpad-Export-Date: 2012-06-10 04:34+0000\n"
+"X-Generator: Launchpad (build 15376)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -5848,29 +5848,31 @@ msgstr "Vladimir Samodourov"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:125
 msgid "Pushchino Radio Astronomy Observatory"
-msgstr ""
+msgstr "Balai Cerap Radio Astronomi  Pushchino"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:126
 msgid "in Russia"
-msgstr ""
+msgstr "di Rusia"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:128
 msgid "Maciej Serylak"
-msgstr ""
+msgstr "Maciej Serylak"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:130
 msgid "Nancay Radioastronomical Observatory"
-msgstr ""
+msgstr "Balai Cerap Radioastronomi  Nancay"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:131
 msgid "in France"
-msgstr ""
+msgstr "di Perancis"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:133
 msgid ""
 "Support is provided via the Launchpad website.  Be sure to put \"Pulsars "
 "plugin\" in the subject when posting."
 msgstr ""
+"Sokongan disediakan melalui laman sesawang Launchpad. Pastikan tajuk "
+"\"Pulsars plugin\" di mengepos."
 
 #. TRANSLATORS: The numbers contain the opening and closing tag of an HTML link
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:142
@@ -5879,43 +5881,45 @@ msgid ""
 "If you want read full information about plugin, his history and format of "
 "catalog you can %1get info here%2."
 msgstr ""
+"Jika anda hendak baca maklumat penuh mengenai pemalam, sejarahnya dan format "
+"katalog, anda boleh %1dapatkan maklumat disini%2."
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:165
 #, qt-format
 msgid "Next update: %1 days"
-msgstr ""
+msgstr "Kemaskini berikutnya: %1 hari"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:207
 msgid "Pulsars is updated"
-msgstr ""
+msgstr "Pulsar dikemaskini"
 
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:252
 msgid "Pulsars Configuration"
-msgstr ""
+msgstr "Konfigurasi Pulsar"
 
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:253
 msgid "Pulsars Plug-in Configuration"
-msgstr ""
+msgstr "Konfigurasi Pemalam Pulsar"
 
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:255
 msgid "Update catalog from Internet"
-msgstr ""
+msgstr "Kemaskini katalog dari Internet"
 
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:258
 msgid "Update frequency (days):"
-msgstr ""
+msgstr "Kekerapan kemaskini (hari):"
 
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:259
 msgid "[next update info]"
-msgstr ""
+msgstr "[maklumat kemaskini berikutnya]"
 
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:261
 msgid "Display mode for pulsars"
-msgstr ""
+msgstr "Mod paparan untuk pulsar"
 
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:262
 msgid "Enable display of distribution for pulsars"
-msgstr ""
+msgstr "Benarkan paparan distribusi untuk pulsar"
 
 #~ msgid "Set Location "
 #~ msgstr "Tentukan Lokasi "
